--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><link rel="icon" type="image/x-icon" href="icone.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Creator</title>
+    <title>KO-KO D&apos;ROÇA</title>
     <link href="main.css" rel="stylesheet">
   </head>
   <script>
