--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head><link rel="icon" type="image/x-icon" href="icone.ico">
+  <head><
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KO-KO D&apos;ROÇA</title>
+   <meta name="description" content="Venda de ovos de galinha caipira direto do criador. Ovos frescos, naturais e nutritivos, criados soltos no terreiro. Entrega para a região.">
+
+  <meta name="keywords" content="ovos caipiras, galinha caipira, Fortaleza, criador de galinha, ovos frescos, ovos do sítio, ovos naturais, galinha criada solta, ovos caipira direto do produtor, ovos saudáveis, alimentação natural">
+
+  <meta name="author" content="KO-KO D ROÇA"> 
+  <link rel="icon" href="icone.ico" type="image/x-icon">
     <link href="main.css" rel="stylesheet">
   </head>
   <script>
