atualizei o nome,coloquei robost e facilitei achar no google

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head><
+<html lang="pt-BR">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KO-KO D&apos;ROÇA</title>
-   <meta name="description" content="Venda de ovos de galinha caipira direto do criador. Ovos frescos, naturais e nutritivos, criados soltos no terreiro. Entrega para a região.">
-
-  <meta name="keywords" content="ovos caipiras, galinha caipira, Fortaleza, criador de galinha, ovos frescos, ovos do sítio, ovos naturais, galinha criada solta, ovos caipira direto do produtor, ovos saudáveis, alimentação natural">
+    
+    <title>KO-KO D'ROÇA- Ovos Caipiras Direto Do Criador</title>
+   
+    <meta name="description" content="Venda de ovos de galinha caipira direto do criador. Ovos frescos, naturais e nutritivos, criados soltos no terreiro. Entrega para a região.">
+  <meta name="robots" content ="index, follow">
+  <meta name="keywords" content="ovos caipiras, galinha caipira, koko da roca, KOKO da roca, Fortaleza, criador de galinha, ovos frescos, ovos do sítio, ovos naturais, galinha criada solta, ovos caipira direto do produtor, ovos saudáveis, alimentação natural">
 
   <meta name="author" content="KO-KO D ROÇA"> 
   <link rel="icon" href="icone.ico" type="image/x-icon">
