salvando numero corretamente

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>KO-KO D'ROÇA- Ovos Caipiras Direto Do Criador</title>
+    <title>KO-KO D'ROÇA- Ovos Caipiras Frescos</title>
    
     <meta name="description" content="Venda de ovos de galinha caipira direto do criador. Ovos frescos, naturais e nutritivos, criados soltos no terreiro. Entrega para a região.">
   <meta name="robots" content ="index, follow">
