--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <meta name="author" content="KO-KO D ROÇA"> 
   <link rel="icon" href="icone.ico" type="image/x-icon">
     <link href="main.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  </head>
   </head>
   <script>
     new EventSource('/esbuild').addEventListener('change', () =>
@@ -22,5 +24,9 @@
   <body>
     <div id="app"></div>
     <script src="main.js"></script>
+    <a href="https://www.instagram.com/cria_koko" target="_blank" style="position:fixed; bottom:15px; right:15px; background:#E1306C; color:white; padding:10px 15px; border-radius:8px; text-decoration:none; font-weight:bold; box-shadow: 0 2px 6px rgba(0,0,0,0.3); z-index:9999;">
+      <i class="fab fa-instagram"></i> Instagram
+       </a>
+       <script src="main.js"></script>
   </body>
 </html>
